--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": ">=10"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "gh-pages": "^3.2.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.6.3"
@@ -31,6 +32,10 @@
     "README.md"
   ],
   "dependencies": {
-    "cross-fetch": "^3.1.5"
+    "@solana/buffer-layout": "^4.0.0",
+    "bs58": "^5.0.0",
+    "cross-fetch": "^3.1.5",
+    "js-sha256": "^0.9.0",
+    "snake-case": "^3.0.4"
   }
 }
