--- a/package.json
+++ b/package.json
@@ -1,41 +1,4 @@
 {
-  "name": "solana-programs",
-  "version": "0.0.0",
-  "description": "Solana Program Registry",
-  "main": "dist/main/index.js",
-  "typings": "dist/main/index.d.ts",
-  "module": "dist/module/index.js",
-  "repository": "https://github.com/solana-labs/token-list",
-  "license": "Apache",
-  "keywords": [],
-  "scripts": {
-    "prepublish": "run-s build:*",
-    "build": "run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json"
-  },
-  "engines": {
-    "node": ">=10"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.23",
-    "gh-pages": "^3.2.3",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.6.3"
-  },
-  "files": [
-    "dist/main",
-    "dist/module",
-    "!**/*.spec.*",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
-  ],
-  "dependencies": {
-    "@solana/buffer-layout": "^4.0.0",
-    "bs58": "^5.0.0",
-    "cross-fetch": "^3.1.5",
-    "js-sha256": "^0.9.0",
-    "snake-case": "^3.0.4"
-  }
+    "private": true,
+    "workspaces": ["packages/*"]
 }
