--- a/packages/solana-programs/package.json
+++ b/packages/solana-programs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solana-programs",
+  "name": "@solflare-wallet/solana-programs",
   "version": "0.0.2",
   "description": "Solana Program Registry",
   "main": "dist/main/index.js",
