--- a/packages/instruction-parser/package.json
+++ b/packages/instruction-parser/package.json
@@ -17,7 +17,7 @@
     "printWidth": 120
 },
   "dependencies": {
-    "solana-programs": "^0.0.1",
+    "@solflare-wallet/solana-programs": "^0.0.2",
     "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
