--- a/packages/instruction-parser/package.json
+++ b/packages/instruction-parser/package.json
@@ -1,53 +1,57 @@
 {
-  "version": "0.0.2",
-  "name": "instruction-parser",
-  "description": "Instruction parser",
-  "license": "GPL-3.0",
-  "keywords": [
-    "webpack",
-    "typescript",
-    "instruction",
-    "parser"
-  ],
-  "prettier": {
-    "useTabs": true,
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": true,
-    "printWidth": 120
-},
-  "dependencies": {
-    "@solflare-wallet/solana-programs": "^0.0.2",
-    "vm-browserify": "^1.1.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "@webpack-cli/init": "^1.0.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "codecov": "^3.8.1",
-    "copy-webpack-plugin": "^6.2.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.12.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.6.1",
-    "mini-css-extract-plugin": "^1.2.1",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.7",
-    "typescript": "^4.0.5",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.3.0"
-  },
-  "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve",
-    "coverage": "jest --collect-coverage",
-    "test": "jest --watchAll",
-    "build": "cross-env NODE_ENV=production webpack"
-  }
+	"version": "0.0.2",
+	"name": "instruction-parser",
+	"description": "Instruction parser",
+  "homepage": "http://solflare-wallet.github.io/solana-programs",
+	"license": "GPL-3.0",
+	"keywords": [
+		"webpack",
+		"typescript",
+		"instruction",
+		"parser"
+	],
+	"prettier": {
+		"useTabs": true,
+		"tabWidth": 4,
+		"semi": true,
+		"singleQuote": true,
+		"printWidth": 120
+	},
+	"dependencies": {
+		"@solflare-wallet/solana-programs": "^0.0.2",
+		"vm-browserify": "^1.1.2"
+	},
+	"devDependencies": {
+		"@types/jest": "^26.0.15",
+		"@typescript-eslint/eslint-plugin": "^4.6.0",
+		"@typescript-eslint/parser": "^4.6.0",
+		"@webpack-cli/init": "^1.0.2",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"codecov": "^3.8.1",
+		"copy-webpack-plugin": "^6.2.1",
+		"cross-env": "^7.0.2",
+		"css-loader": "^5.0.0",
+		"eslint": "^7.12.1",
+		"file-loader": "^6.2.0",
+		"gh-pages": "^3.2.3",
+		"html-webpack-plugin": "^4.5.0",
+		"jest": "^26.6.1",
+		"mini-css-extract-plugin": "^1.2.1",
+		"ts-jest": "^26.4.3",
+		"ts-loader": "^8.0.7",
+		"typescript": "^4.0.5",
+		"webpack": "^5.3.2",
+		"webpack-cli": "^4.1.0",
+		"webpack-dev-server": "^3.11.0",
+		"webpack-merge": "^5.3.0"
+	},
+	"scripts": {
+		"start": "cross-env NODE_ENV=development webpack serve",
+		"coverage": "jest --collect-coverage",
+		"test": "jest --watchAll",
+		"build": "cross-env NODE_ENV=production webpack",
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d dist"
+	}
 }
